--- a/src/style/index.less
+++ b/src/style/index.less
@@ -1,1 +1,1 @@
-@import url('//cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.css');
+@import url('https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.css');
